--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Tutorv3usu</string>
+    <string name="app_name">Tutor Par</string>
     <string name="next">NEXT</string>
     <string name="skip">SKIP</string>
     <string name="start">START</string>
